--- a/main.css
+++ b/main.css
@@ -1,21 +1,21 @@
 .naranja {
 	width: 200px;
 	height: 200px;
-	background-color: #FF4000;
+	background-color: #0040FF;
 	position: static;
 }
 .morado {
 	width: 100px;
 	height: 100px;
-	background-color: purple;
-	position: relative;
+	background-color: #4B8A08;
+	position: absolute;
 	left: 50px;
 	top: 50px;
 }
 .amarillo {
 	width: 50px;
 	height: 50px;
-	background-color: yellow;
+	background-color: black;
 	position: absolute;
 }
 body {
